--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.5.1",
         "bootstrap-icons": "^1.11.2",
+        "clipboard": "^2.0.11",
         "tailwindcss-animated": "^1.0.1"
     }
 }
