--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@fortawesome/fontawesome-free": "^6.5.1",
         "bootstrap-icons": "^1.11.2",
         "clipboard": "^2.0.11",
+        "sweetalert2": "^11.10.2",
         "tailwindcss-animated": "^1.0.1"
     }
 }
